--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,6 +6,8 @@
     <title>Login</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <style>
         body {
           background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
@@ -42,6 +44,13 @@
         </div>
         <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
+    <div class="mt-3">
+        <a th:href="@{/oauth2/authorization/google}" class="btn btn-outline-dark w-100 d-flex align-items-center justify-content-center" style="gap: 8px;">
+            <i class="fab fa-google"></i>
+            Entrar com Google
+        </a>
+    </div>
+
 </div>
 
 <!-- Bootstrap JS -->
